Fix HomeAssistantAdapter Map cast (use Collections.emptyMap fallback)
Pattern-match instanceof with Map.of() still triggered a javac wildcard
capture error. Use raw instanceof + explicit cast + Collections.emptyMap()
which compiles cleanly.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>